--- a/BookStoreUI/Views/Shared/_Layout.cshtml
+++ b/BookStoreUI/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/home/Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/UserOrder/UserOrders">My Orders</a>
+                    </li>
                 </ul>
                    @* <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -54,5 +57,22 @@
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-
+<script>
+    LoadCartItemCount();
+    async function LoadCartItemCount(){
+        try{
+            var response =await fetch(`/cart/GetTotalItemsinCart`)
+            if (response.status == 200) {
+                var responseText = await response.json();
+                var cartItemElement = document.getElementById('cartItemCount');
+                cartItemElement.innerHTML = responseText;
+                console.log(cartItemElement.innerHTML);
+            }
+            
+        }
+        catch(err){
+            console.log(err);
+        }
+    }
+</script>
 @await RenderSectionAsync("Scripts", required: false)
