--- a/BookStoreUI/Views/Shared/_LoginPartial.cshtml
+++ b/BookStoreUI/Views/Shared/_LoginPartial.cshtml
@@ -2,15 +2,24 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
+@*cart item count*@
 <ul class="navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link text-white" href="/Cart/GetUserCart">
+            <span id="cartItemCount" class="badge bg-info">(0)</span>
+            <i class="bi bi-cart"></i>
+        </a>
+    </li>
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        <a  class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                Hello <span id="username"> @User.Identity?.Name!</span>
             @if (User.IsInRole("Admin"))
             {
                 <span>(Admin)</span>
             }
+        </a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -20,12 +29,7 @@
 }
 else
 {
-    <li class="nav-item">            
-            <a class="nav-link text-white" href="#">
-                <span class="badge bg-info">(0)</span>
-                <i class="bi bi-cart"></i>
-            </a>
-    </li>
+   
     <li class="nav-item">
         <a class="nav-link text-White" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
