Modified the display of GetUserCart page and implement Marque in _layout page

--- a/BookStoreUI/Views/Shared/_Layout.cshtml
+++ b/BookStoreUI/Views/Shared/_Layout.cshtml
@@ -26,9 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/home/Privacy">Privacy</a>
                     </li>
-                    <li class="nav-item">
+                    @*<li class="nav-item"> ->this is moved to dropdown menu in username in loginpartial page
                         <a class="nav-link" href="/UserOrder/UserOrders">My Orders</a>
-                    </li>
+                    </li>*@
                 </ul>
                    @* <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -54,6 +54,10 @@
         @RenderBody()
     </div>
 </body>
+<marquee behavior="scroll" direction="left" scrollamount="6">
+    <img src="/Images/Marvel.png" style="width:100px;height:80px;" /></img>
+    <img src="/Images/PeppaPig.png" style="width:100px;height:80px;" /></img>
+</marquee>
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
