--- a/BookStoreUI/Views/Home/Index.cshtml
+++ b/BookStoreUI/Views/Home/Index.cshtml
@@ -35,11 +35,11 @@
     <div class="card mx-3 mb-4" style="width: 11rem;">
         @if(string.IsNullOrEmpty(book.Image))
         {
-                <img style="width:100%;height:180px"  src="/images/NoImage.jpg" class="card-img-top" alt="...">
+                <img style="width:100%;height:100px"  src="/images/NoImage.jpg" class="card-img-top" alt="...">
         }
         else
         {
-                <img style="width:100%;height:180px" src="/images/@book.Image" class="card-img-top" alt="...">
+                <img style="width:100%;height:100px" src="/images/@book.Image" class="card-img-top" alt="...">
         }
             
         <div class="card-body">
@@ -47,10 +47,10 @@
             <p class="card-text">
                 <b>Genre:</b> @book.GenreName  <br />
                 <b>Author:</b> @book.AuthorName <br />
-                <b>Price:</b>@book.Price
+                <b>Price (£):</b>@book.Price
                     
             </p>
-            <button type="button" onclick="add(@book.Id)" class="btn btn-primary">Add To Cart</button>
+            <button type="button" onclick="add(@book.Id)" class="btn btn-primary">Add To Basket</button>
         </div>
     </div>
     }
