--- a/BookStoreUI/Views/Shared/_LoginPartial.cshtml
+++ b/BookStoreUI/Views/Shared/_LoginPartial.cshtml
@@ -6,26 +6,43 @@
 <ul class="navbar-nav">
     <li class="nav-item">
         <a class="nav-link text-white" href="/Cart/GetUserCart">
-            <span id="cartItemCount" class="badge bg-info">(0)</span>
+            <span id="cartItemCount" class="badge bg-info"></span> @*Removed (0)*@
             <i class="bi bi-cart"></i>
         </a>
     </li>
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+    <li class="nav-item dropdown">
+        <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" role="button"
+               aria-haspopup="true" aria-expanded="false" asp-area="Identity"
+           asp-page="/Account/Manage/Index" title="Manage">
+                Hello <span id="username"> @User.Identity?.Name!</span>
+                @if (User.IsInRole("Admin"))
+                {
+                    <span>(Admin)</span>
+                }
+            </a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="/UserOrder/UserOrders">My Orders</a>
+                <div class="dropdown-divider"></div>
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="nav-link btn btn-link text-white">&npsp;Logout</button>
+                </form>
+            </div>
+        </li>
+        @*<a  class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
                 Hello <span id="username"> @User.Identity?.Name!</span>
             @if (User.IsInRole("Admin"))
             {
                 <span>(Admin)</span>
             }
-        </a>
-    </li>
-    <li class="nav-item">
+        </a>*@
+  
+   @* <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button  type="submit" class="nav-link btn btn-link text-white">Logout</button>
         </form>
-    </li>
+    </li>*@
 }
 else
 {
